force-app/main/default/objects/Time_Entry__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>(DATETIMEVALUE(End_Date_Time__c) - DATETIMEVALUE(Start_Date_Time__c))*24</formula>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>