force-app/main/default/objects/Time_Entry__c/fields/Employee_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_User_ID__c</fullName>
    <formula>CASESAFEID(Shift__r.Time_Card__r.Employee__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee User ID</label>
    <type>Text</type>
</CustomField>