force-app/main/default/objects/Time_Entry__c/fields/Entry_Complete__c.field-meta.xml
<CustomField>
    <fullName>Entry_Complete__c</fullName>
    <formula>Duration__c &gt; 0</formula>
    <label>Entry Complete</label>
    <type>Checkbox</type>
</CustomField>