force-app/main/default/objects/Time_Entry__c/fields/Flow_Interview_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_Date_Time__c</fullName>
    <label>Flow Interview Date/Time</label>
    <type>DateTime</type>
</CustomField>