force-app/main/default/objects/Time_Entry__c/validationRules/Restrict_Editing_TimeCards_ManagerAdmin.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Editing_TimeCards_ManagerAdmin</fullName>
    <active>false</active>
    <description>Only the “Manager” of Employee__c as well as members of the “Time Cards” queue or System Administrators should be allowed to edit</description>
    <errorConditionFormula>AND(!isNew(), $User.Id != Shift__r.Time_Card__r.Employee__r.ManagerId , $Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>You do not have access to edit this record. Please contact your supervisor</errorMessage>
</ValidationRule>